@@ -67,12 +67,12 @@ div.tabBlock .timetrackingButtons .elapsedTime {
 
 button.startTracking .icon,
 div.tabBlock .timetrackingButtons button.startTracking .icon {
-	background:url(../img/icons.png) no-repeat 0 -29px;
+	background:url(../img/icons.png) no-repeat 0 -28px;
 }
 
 button.stopTracking .icon,
 div.tabBlock .timetrackingButtons button.stopTracking .icon {
-	background:url(../img/icons.png) no-repeat 0 1px;
+	background:url(../img/icons.png) no-repeat 0 2px;
 }
 
 
