@@ -1,4 +1,4 @@
-#todoyutimetrackingheadlettracking .button {
+#todoyutimetrackingheadlettracking a.button {
 	background:url(../img/icons.png) no-repeat 1px -235px;
 }
 #todoyutimetrackingheadlettracking .button.tracking {
